--- a/index.html
+++ b/index.html
@@ -7,34 +7,51 @@
     <link rel="icon" type="image/png" sizes="32x32" href="favicon32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="favicon16.png" />
 
-    <!-- from https://cdn.skauting.cz/css/style.css -->
-    <link rel="stylesheet" href="css/fonts.css" />
-
     <link rel="stylesheet" href="css/styles.css" />
 
     <title>skaut-design</title>
   </head>
 
   <body>
-    <h1>skaut-design</h1>
+    <h1 class="has-text-centered">Skaut design</h1>
 
-    <section>
-      <h1>Nadpis velikosti H1</h1>
-      <h2>Nadpis velikosti H2</h2>
-      <h3>Nadpis velikosti H3</h3>
-      <h4>Nadpis velikosti H4</h4>
-      <h5>Nadpis velikosti H5</h5>
-      <h6>Nadpis velikosti H6</h6>
-      <p>
-        Odstavec běžného textu. Odstavec běžného textu lze <b>dostylovat</b> příslušnými tagy přímo
-        <i>pro daná slova, spojení či věty</i>.
-      </p>
-      <p class="italic">Odstavec běžného textu, který je kurzívou.</p>
-      <p class="bold">Odstavec běžného textu, který je tučně.</p>
-      <p class="bold italic">Odstavec běžného textu, který je tučnou kurzívou.</p>
+    <section class="section">
+      <div class="container">
+        <h2 class="has-text-centered">Typografie</h2>
+
+        <h1>Nadpis velikosti H1</h1>
+        <h2>Nadpis velikosti H2</h2>
+        <h3>Nadpis velikosti H3</h3>
+        <h4>Nadpis velikosti H4</h4>
+        <h5>Nadpis velikosti H5</h5>
+        <h6>Nadpis velikosti H6</h6>
+        <p>
+          Odstavec běžného textu. Odstavec běžného textu lze <b>dostylovat</b> příslušnými tagy
+          přímo <i>pro daná slova, spojení či věty</i>.
+        </p>
+        <p class="italic">Odstavec běžného textu, který je kurzívou.</p>
+        <p class="bold">Odstavec běžného textu, který je tučně.</p>
+        <p class="bold italic">Odstavec běžného textu, který je tučnou kurzívou.</p>
+      </div>
     </section>
 
-    <section>
+    <section class="section">
+      <div class="container">
+        <h2 class="has-text-centered">Seznamy</h2>
+
+        <div class="content is-medium">
+          <div class="heading">S sebou</div>
+          <ul>
+            <li>Ešus</li>
+            <li>Lžíce</li>
+            <li>Spacák</li>
+            <li>Pití</li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
+    <section class="section">
       <h1 class="title">
         Bulma
       </h1>
