Variable structure set

--- a/index.html
+++ b/index.html
@@ -41,6 +41,14 @@
 
     <section class="section">
       <div class="container">
+        <h2 class="title is-2 has-text-centered">Odkazy a tlačítka</h2>
+
+        <a href="#">Více &gt;</a>
+      </div>
+    </section>
+
+    <section class="section">
+      <div class="container">
         <h2 class="title is-2 has-text-centered">Seznamy</h2>
 
         <div class="content">
@@ -67,15 +75,28 @@
 
       <article class="media box">
         <div class="media-content">
-          <p>Vpravo je symbol</p>
+          <p>
+            Tábor je pro děti od začátku jedno velké dobrodružství. Objevují bydlení ve stanu, hry,
+            sportování, koupání, vaření, pobyt v přírodě, jízdu na koni i výlety do okolí. Starší a
+            zkušenější pomáhají nováčkům zvyknout si na táborový život. Právě na skautských táborech
+            při společných zážitcích vznikají pevná přátelství na celý život.
+          </p>
         </div>
         <figure class="media-right">
           <p class="image is-128x128">
-            <img src="/img/SKAUT_kompas_symbol.svg" width="128" height="128" />
+            <img src="./img/SKAUT_stan4_symbol.svg" width="128" height="128" />
           </p>
         </figure>
       </article>
     </section>
+
+    <footer class="footer">
+      <div class="content has-text-centered">
+        <p>
+          Lukáš Trumm &mdash; 2019
+        </p>
+      </div>
+    </footer>
 
     <script src="script.js"></script>
   </body>
