--- a/index.html
+++ b/index.html
@@ -38,14 +38,7 @@
       </div>
     </nav>
     <section class="hero is-medium">
-      <div class="hero-body backgrount-hero4">
-        <div class="container">
-          <div class="heading-background sk-centered">
-            <h1 class="title is-1">Skaut &nbsp;&nbsp;&nbsp;design</h1>
-          </div>
-        </div>
-      </div>
-    </section>
+        <div class="hero-body background-hero4">
 
     <section class="section"></section>
 
