Structural changes for 0.1.0 version

--- a/index.html
+++ b/index.html
@@ -37,174 +37,183 @@
         </div>
       </div>
     </nav>
-    <section class="hero is-medium">
+    <main>
+      <section class="hero is-medium">
         <div class="hero-body background-hero4">
+          <div class="container">
+            <div class="heading-background sk-centered">
+              <h1 class="title is-1">Skaut &nbsp;&nbsp;&nbsp;design</h1>
+            </div>
+          </div>
+        </div>
+      </section>
 
-    <section class="section"></section>
+      <section class="section"></section>
 
-    <section class="section">
-      <div class="container">
-        <i>Co to je</i>
-      </div>
-    </section>
+      <section class="section">
+        <div class="container">
+          <i>Co to je</i>
+        </div>
+      </section>
 
-    <section class="section">
-      <div class="container">
-        <i>Jak to pouzit</i>
-      </div>
-    </section>
+      <section class="section">
+        <div class="container">
+          <i>Jak to pouzit</i>
+        </div>
+      </section>
 
-    <section class="section" id="Typografie">
-      <div class="container">
-        <h2 class="title is-2 has-text-centered sk-underline is-orange">Typografie</h2>
+      <section class="section" id="Typografie">
+        <div class="container">
+          <h2 class="title is-2 has-text-centered sk-underline is-orange">Typografie</h2>
 
-        <h1 class="title is-1">Nadpis velikosti h1</h1>
-        <h2 class="title is-2">Nadpis velikosti h2</h2>
-        <h3 class="title is-3">Nadpis velikosti h3</h3>
-        <h4 class="title is-4">Nadpis velikosti h4</h4>
-        <h5 class="title is-5">Nadpis velikosti h5</h5>
-        <h6 class="title is-6">Nadpis velikosti h6</h6>
-        <p>
-          Odstavec běžného textu. Odstavec běžného textu lze <b>dostylovat</b> příslušnými tagy
-          přímo <i>pro daná slova, spojení či věty</i>.
-        </p>
-        <p class="is-italic">Odstavec běžného textu, který je kurzívou.</p>
-        <p class="has-text-weight-bold">Odstavec běžného textu, který je tučně.</p>
-        <p class="has-text-weight-bold is-italic">
-          Odstavec běžného textu, který je tučnou kurzívou.
-        </p>
-        <p class="has-text-grey-light">
-          Méně významný text
-        </p>
-      </div>
-    </section>
+          <h1 class="title is-1">Nadpis velikosti h1</h1>
+          <h2 class="title is-2">Nadpis velikosti h2</h2>
+          <h3 class="title is-3">Nadpis velikosti h3</h3>
+          <h4 class="title is-4">Nadpis velikosti h4</h4>
+          <h5 class="title is-5">Nadpis velikosti h5</h5>
+          <h6 class="title is-6">Nadpis velikosti h6</h6>
+          <p>
+            Odstavec běžného textu. Odstavec běžného textu lze <b>dostylovat</b> příslušnými tagy
+            přímo <i>pro daná slova, spojení či věty</i>.
+          </p>
+          <p class="is-italic">Odstavec běžného textu, který je kurzívou.</p>
+          <p class="has-text-weight-bold">Odstavec běžného textu, který je tučně.</p>
+          <p class="has-text-weight-bold is-italic">
+            Odstavec běžného textu, který je tučnou kurzívou.
+          </p>
+          <p class="has-text-grey-light">
+            Méně významný text
+          </p>
+        </div>
+      </section>
 
-    <section class="section" id="Odkazy">
-      <div class="container">
-        <h2 class="title is-2 has-text-centered sk-underline is-green">Odkazy a tlačítka</h2>
+      <section class="section" id="Odkazy">
+        <div class="container">
+          <h2 class="title is-2 has-text-centered sk-underline is-green">Odkazy a tlačítka</h2>
 
-        <div class="content">
+          <div class="content">
+            <div class="columns is-centered">
+              <p class="column is-narrow">
+                Text <a href="#">text</a> text<br />
+                <a href="#">Více &gt;</a>
+              </p>
+              <p class="column is-narrow">
+                <button class="button is-primary">Odeslat</button>
+              </p>
+              <p class="column is-narrow">
+                <button class="button is-link">Přejít do e-shopu&nbsp;&nbsp;&gt;</button>
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="section" id="Seznamy">
+        <div class="container">
+          <h2 class="title is-2 has-text-centered sk-underline is-blue">Seznamy</h2>
+
+          <div class="columns">
+            <div class="column">
+              <div class="content">
+                <p>S sebou</p>
+                <ul>
+                  <li>Ešus</li>
+                  <li>Lžíce</li>
+                  <li>Spacák</li>
+                  <li>Pití</li>
+                </ul>
+              </div>
+            </div>
+            <div class="column">
+              <div class="content">
+                <p>Pracovní postup</p>
+                <ol>
+                  <li>Ešus</li>
+                  <li>Lžíce</li>
+                  <li>Spacák</li>
+                  <li>Pití</li>
+                </ol>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="section" id="Media">
+        <div class="container">
+          <h2 class="title is-2 has-text-centered sk-underline is-orange">Media objekt a box</h2>
+
           <div class="columns is-centered">
-            <p class="column is-narrow">
-              Text <a href="#">text</a> text<br />
-              <a href="#">Více &gt;</a>
-            </p>
-            <p class="column is-narrow">
-              <button class="button is-primary">Odeslat</button>
-            </p>
-            <p class="column is-narrow">
-              <button class="button is-link">Přejít do e-shopu&nbsp;&nbsp;&gt;</button>
-            </p>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="section" id="Seznamy">
-      <div class="container">
-        <h2 class="title is-2 has-text-centered sk-underline is-blue">Seznamy</h2>
-
-        <div class="columns">
-          <div class="column">
-            <div class="content">
-              <p>S sebou</p>
-              <ul>
-                <li>Ešus</li>
-                <li>Lžíce</li>
-                <li>Spacák</li>
-                <li>Pití</li>
-              </ul>
-            </div>
-          </div>
-          <div class="column">
-            <div class="content">
-              <p>Pracovní postup</p>
-              <ol>
-                <li>Ešus</li>
-                <li>Lžíce</li>
-                <li>Spacák</li>
-                <li>Pití</li>
-              </ol>
+            <div class="column is-two-thirds-desktop">
+              <article class="media box has-background-light">
+                <div class="media-content">
+                  <p>
+                    Tábor je pro děti od začátku jedno velké dobrodružství. Objevují bydlení ve
+                    stanu, hry, sportování, koupání, vaření, pobyt v přírodě, jízdu na koni i výlety
+                    do okolí. Starší a zkušenější pomáhají nováčkům zvyknout si na táborový život.
+                    Právě na skautských táborech při společných zážitcích vznikají pevná přátelství
+                    na celý život.
+                  </p>
+                </div>
+                <figure class="media-right">
+                  <div class="image is-128x128">
+                    <img src="./img/shapes/SKAUT_stan4_symbol.svg" width="128" height="128" />
+                  </div>
+                </figure>
+              </article>
             </div>
           </div>
         </div>
-      </div>
-    </section>
+      </section>
 
-    <section class="section" id="Media">
-      <div class="container">
-        <h2 class="title is-2 has-text-centered sk-underline is-orange">Media objekt a box</h2>
+      <section class="section" id="Formular">
+        <div class="container">
+          <h2 class="title is-2 has-text-centered sk-underline is-green">Formulář</h2>
 
-        <div class="columns is-centered">
-          <div class="column is-two-thirds-desktop">
-            <article class="media box has-background-light">
-              <div class="media-content">
-                <p>
-                  Tábor je pro děti od začátku jedno velké dobrodružství. Objevují bydlení ve stanu,
-                  hry, sportování, koupání, vaření, pobyt v přírodě, jízdu na koni i výlety do
-                  okolí. Starší a zkušenější pomáhají nováčkům zvyknout si na táborový život. Právě
-                  na skautských táborech při společných zážitcích vznikají pevná přátelství na celý
-                  život.
-                </p>
-              </div>
-              <figure class="media-right">
-                <div class="image is-128x128">
-                  <img src="./img/shapes/SKAUT_stan4_symbol.svg" width="128" height="128" />
+          <div class="columns">
+            <form class="column is-half-tablet is-one-quarter-fullhd">
+              <h3 class="title is-3">Napište</h3>
+              <div class="">
+                <div class="field">
+                  <label for="username" class="label is-medium">Vaše jméno</label>
+                  <div class="control">
+                    <input required type="text" name="username" class="input is-medium" value="" />
+                  </div>
                 </div>
-              </figure>
-            </article>
+                <div class="field">
+                  <label for="email" class="label is-medium">Email</label>
+                  <div class="control">
+                    <input required type="email" name="email" class="input is-medium" value="" />
+                  </div>
+                </div>
+                <div class="field">
+                  <label for="checkbox" class="label is-medium">Je to tak?</label>
+                  <div class="control">
+                    <input
+                      required
+                      type="checkbox"
+                      name="checkbox"
+                      class="checkbox is-medium"
+                      checked
+                    />
+                  </div>
+                </div>
+                <div class="field">
+                  <label for="textarea" class="label is-medium">Zpráva</label>
+                  <div class="control">
+                    <textarea
+                      name="textarea"
+                      class="textarea is-medium"
+                      placeholder="e.g. Vaše zpráva"
+                    ></textarea>
+                  </div>
+                </div>
+              </div>
+            </form>
           </div>
         </div>
-      </div>
-    </section>
-
-    <section class="section" id="Formular">
-      <div class="container">
-        <h2 class="title is-2 has-text-centered sk-underline is-green">Formulář</h2>
-
-        <div class="columns">
-          <form class="column is-half-tablet is-one-quarter-fullhd">
-            <h3 class="title is-3">Napište</h3>
-            <div class="">
-              <div class="field">
-                <label for="username" class="label is-medium">Vaše jméno</label>
-                <div class="control">
-                  <input required type="text" name="username" class="input is-medium" value="" />
-                </div>
-              </div>
-              <div class="field">
-                <label for="email" class="label is-medium">Email</label>
-                <div class="control">
-                  <input required type="email" name="email" class="input is-medium" value="" />
-                </div>
-              </div>
-              <div class="field">
-                <label for="checkbox" class="label is-medium">Je to tak?</label>
-                <div class="control">
-                  <input
-                    required
-                    type="checkbox"
-                    name="checkbox"
-                    class="checkbox is-medium"
-                    checked
-                  />
-                </div>
-              </div>
-              <div class="field">
-                <label for="textarea" class="label is-medium">Zpráva</label>
-                <div class="control">
-                  <textarea
-                    name="textarea"
-                    class="textarea is-medium"
-                    placeholder="e.g. Vaše zpráva"
-                  ></textarea>
-                </div>
-              </div>
-            </div>
-          </form>
-        </div>
-      </div>
-    </section>
+      </section>
+    </main>
 
     <footer class="footer">
       <div class="content has-text-centered">
@@ -253,6 +262,6 @@
       </div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
