Navbar menu fixes

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="container">
         <div class="navbar-brand">
           <a href="/" class="navbar-item is-paddingless">
-            <img src="/img/logo/SKAUT_horizontalni_logo.svg" width="150" height="65" />
+            <img src="/img/logo/SKAUT_horizontalni_logo.svg" />
           </a>
           <span class="navbar-burger burger" data-target="navbarTop">
             <span aria-hidden="true"></span>
